--- a/css/main.css
+++ b/css/main.css
@@ -51,3 +51,4 @@ footer{width: 1200px; height: 100px; clear: both;margin-top: 7rem;position: rela
 }
 .bottom_logo{position: absolute;margin-top: 30px;margin-left: 10px;}
 .co{position: absolute;right: 20px;top: 45px;}
+.co a{color: #333;}
